<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:navigationIcon="@drawable/ic_oui_back"
    app:title="@string/drawer_font_viewer">

    <FrameLayout
        android:id="@+id/font_viewer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_font_size"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        style="@style/FabStyle"
        android:tooltipText="@string/font_size_dialog_title"
        app:layout_location="footer" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/format_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:layout_location="footer"
        app:cardCornerRadius="28dp"
        app:cardBackgroundColor="@color/sesl_menu_popup_bg_color"
        android:layout_margin="24dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp"
            android:paddingHorizontal="15dp">

            <ImageView
                android:id="@+id/btn_bold"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_oui_text_bold"
                android:background="@drawable/bg_format_toggle"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="15dp"
                android:tooltipText="@string/btn_bold"
                android:foreground="@drawable/drawer_item_list_ripple" />

            <ImageView
                android:id="@+id/btn_italic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_oui_text_italic"
                android:background="@drawable/bg_format_toggle"
                android:clickable="true"
                android:focusable="true"
                android:tooltipText="@string/btn_italic"
                android:foreground="@drawable/drawer_item_list_ripple" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>
