<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:title="@string/app_name"
    app:subtitle="@string/app_subtitle">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_location="main_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drawer_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        app:layout_location="drawer_panel" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fab_font_size"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/background_floating_material"
        app:cardCornerRadius="28dp"
        app:cardElevation="4dp"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:tooltipText="@string/font_size_and_style"
        app:layout_location="root">

        <TextView
            android:id="@+id/fab_font_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="18"
            android:includeFontPadding="false"
            android:fontFamily="roboto-num3R"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24dp" />

    </androidx.cardview.widget.CardView>

</dev.oneuiproject.oneui.layout.DrawerLayout>
